correct white-space wrap behavior.

--- a/src/styles/pages/Certifications.css
+++ b/src/styles/pages/Certifications.css
@@ -53,7 +53,7 @@
                         width: 100%;
                     }
                     @media (max-width: 650px) {
-                        white-space: wrap;
+                        white-space: normal;
                         font-size: 1.2rem;
                         &::after{
                             content: none;
